feat(deps): WIP - Bootstrap 5

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -42,6 +42,11 @@
 Global Styles
 *******************/
 
+// OVERRIDE BT5
+.table>:not(caption)>*>* {
+  background-color: transparent;
+}
+
 * {
   outline: none;
   box-sizing: border-box;
