--- a/src/app/scoreboard/scoreboard.component.html
+++ b/src/app/scoreboard/scoreboard.component.html
@@ -100,10 +100,10 @@
                 </div>
                 <div class="col-xs-12 noselect">
                   <mat-chip-listbox class="scoreboard-control-chips" style="float: right;" [multiple]="true" [selectable]="true" [disabled]="loadingPlayers">
-                    <mat-chip-option style="cursor: pointer" class="btn-chip" (click)="prevDay()"><mat-icon matChipAvatar>chevron_left</mat-icon>Previous day</mat-chip-option>
-                    <mat-chip-option style="cursor: pointer" class="btn-chip" *ngIf="nextUpdate == ''" (click)="nextDay()">Next day<mat-icon matChipRemove style="color: #fff; opacity: 1;">chevron_right</mat-icon></mat-chip-option>
-                    <mat-chip-option style="cursor: pointer" class="btn-chip" *ngIf="nextUpdate == ''" (click)="today()">Today<mat-icon matChipRemove style="color: #fff; opacity: 1;">last_page</mat-icon></mat-chip-option>
-                    <mat-chip-option style="cursor: pointer" class="btn-chip" *ngIf="nextUpdate != ''" (click)="refresh()">Refresh<mat-icon matChipRemove style="color: #fff; opacity: 1;">refresh</mat-icon></mat-chip-option>
+                    <mat-chip-option style="cursor: pointer" class="btn-chip" (click)="prevDay()"><mat-icon>chevron_left</mat-icon>Previous day</mat-chip-option>
+                    <mat-chip-option style="cursor: pointer" class="btn-chip" *ngIf="nextUpdate == ''" (click)="nextDay()">Next day<mat-icon style="color: #fff; opacity: 1;">chevron_right</mat-icon></mat-chip-option>
+                    <mat-chip-option style="cursor: pointer" class="btn-chip" *ngIf="nextUpdate == ''" (click)="today()">Today<mat-icon style="color: #fff; opacity: 1;">last_page</mat-icon></mat-chip-option>
+                    <mat-chip-option style="cursor: pointer" class="btn-chip" *ngIf="nextUpdate != ''" (click)="refresh()">Refresh<mat-icon style="color: #fff; opacity: 1;">refresh</mat-icon></mat-chip-option>
                   </mat-chip-listbox>
                 </div>
               </div>
