--- a/src/assets/styles/variable.scss
+++ b/src/assets/styles/variable.scss
@@ -1,5 +1,5 @@
-$bodyfont: 'Roboto', sans-serif;
-$headingfont: 'Roboto', sans-serif;
+$bodyfont: 'Inter', sans-serif;
+$headingfont: 'Inter', sans-serif;
 
 @import '@angular/material/theming';
 
