--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
 @import '~@angular/material/prebuilt-themes/purple-green.css';
+@import "~bootstrap-icons/font/bootstrap-icons.css";
+
 
 /** Import core style */
 @import '@ngx-share/button/themes/default/default-theme';
