--- a/src/app/indexer/siege/siege.component.scss
+++ b/src/app/indexer/siege/siege.component.scss
@@ -126,4 +126,18 @@
       padding: 10px 50px 20px;
     }
   }
+  .average-luck {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    .luck-icon {
+      img {
+        height: 20px;
+      }
+    }
+    .luck-value {
+      margin-top: -5px;
+      font-weight: 500;
+    }
+  }
 }
