--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1077,6 +1077,10 @@ mat-paginator {
     font-size: 14px !important;
   }
 }
+.game-border {
+  border: 4px solid transparent;
+  border-image: url(~assets/images/game/border.png) 3 stretch;
+}
 .gd-loading-overlay {
   opacity: 0.3 !important;
   pointer-events: none !important;
